Generate jti file from jtrunner
Signed-off-by: Shelley Lambert <slambert@gmail.com>